--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
+    "caniuse-lite": "^1.0.30001553",
     "chart.js": "^4.2.1",
     "html-react-parser": "^3.0.12",
     "react": "^18.2.0",
